---
source: integ-tests/tests/parser.rs
expression: valid_toml
---
{
  "answer1": "\u000b",
  "answer10": "δα",
  "answer11": "ꯁ",
  "answer4": "δα",
  "answer8": "δβ",
  "answer9": "샞",
  "backslash": "This string has a \\ backslash character.",
  "backspace": "This string has a \b backspace character.",
  "bar": "\u0000",
  "carriage": "This string has a \r carriage return character.",
  "delete": "This string has a  delete control code.",
  "empty": "",
  "firstnl": "This string has a ' quote character.",
  "formfeed": "This string has a \f form feed character.",
  "key1": "One\nTwo",
  "key2": "One\nTwo",
  "key3": "One\nTwo",
  "key4": "The quick brown fox jumps over the lazy dog.",
  "key5": "The quick brown fox jumps over the lazy dog.",
  "key6": "The quick brown fox jumps over the lazy dog.",
  "lbackslash": "This string has a \\\\ backslash character.",
  "lbackspace": "This string has a \\b backspace character.",
  "lcarriage": "This string has a \\r carriage return character.",
  "lformfeed": "This string has a \\f form feed character.",
  "lines": "The first newline is\ntrimmed in raw strings.\nAll other whitespace\nis preserved.\n",
  "lnewline": "This string has a \\n new line character.",
  "lslash": "This string has a \\/ slash character.",
  "ltab": "This string has a \\t tab character.",
  "newline": "This string has a \n new line character.",
  "notunicode1": "This string does not have a unicode \\u escape.",
  "notunicode2": "This string does not have a unicode \\u escape.",
  "notunicode3": "This string does not have a unicode \\u0075 escape.",
  "notunicode4": "This string does not have a unicode \\u escape.",
  "quote": "This string has a \" quote character.",
  "quoted": "Tom \"Dubs\" Preston-Werner",
  "regex": "<\\i\\c*\\s*>",
  "regex2": "I [dw]on't need \\d{2} apples",
  "slash": "This string has a / slash character.",
  "tab": "This string has a \t tab character.",
  "unicode": "δ",
  "unitseparator": "This string has a \u001f unit separator control code.",
  "winpath": "C:\\Users\\nodejs\\templates",
  "winpath2": "\\\\ServerX\\admin$\\system32\\"
}
